test list apis